Dummy table added - example with jakubm.com data layout

--- a/index.html
+++ b/index.html
@@ -53,6 +53,69 @@
 	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>Flight</th>
+      <th>Scheduled Time</th>
+      <th>Destination</th>
+      <th>Airline</th>
+      <th>Terminal</th>
+      <th>Gate</th>
+      <th>Status</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>OK 111</td>
+      <td>24.01. 15:45</td>
+      <td>London</td>
+      <td>Czech Airlines</td>
+      <td>Terminal 1</td>
+      <td>B11</td>
+      <td>Boarding</td>
+    </tr>
+    <tr>
+      <td>OK 111</td>
+      <td>24.01. 15:45</td>
+      <td>London</td>
+      <td>Czech Airlines</td>
+      <td>Terminal 1</td>
+      <td>B11</td>
+      <td>Boarding</td>
+    </tr>
+    <tr>
+      <td>OK 111</td>
+      <td>24.01. 15:45</td>
+      <td>London</td>
+      <td>Czech Airlines</td>
+      <td>Terminal 1</td>
+      <td>B11</td>
+      <td>Boarding</td>
+    </tr>
+    <tr>
+      <td>OK 111</td>
+      <td>24.01. 15:45</td>
+      <td>London</td>
+      <td>Czech Airlines</td>
+      <td>Terminal 1</td>
+      <td>B11</td>
+      <td>Boarding</td>
+    </tr>
+    <tr>
+      <td>OK 111</td>
+      <td>24.01. 15:45</td>
+      <td>London</td>
+      <td>Czech Airlines</td>
+      <td>Terminal 1</td>
+      <td>B11</td>
+      <td>Boarding</td>
+    </tr>
+  </tbody>
+  <tbody>
+
+  </tbody>
+</table>
 <div class="row">
 <ul class="list-group">
 	<li class="list-group-item">1</li>
